--- a/webpack-subresource-integrity/package.json
+++ b/webpack-subresource-integrity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-subresource-integrity",
+  "name": "@ivankov/webpack-subresource-integrity",
   "version": "1.0.0",
   "description": "Webpack plugin for enabling Subresource Integrity",
   "author": "Stepan Ivankov",
